Enable static SPA build: generate public/index.html from Vite manifest and set Vercel dist to public

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "public/build" }
+      "config": { "distDir": "public" }
     }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
