--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
   "framework": null,
   "outputDirectory": "public",
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.7.1"
+    "api/handler.php": {
+      "runtime": "vercel-php@0.7.4"
     }
   },
   "routes": [
@@ -14,7 +14,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.php"
+      "dest": "/api/handler.php"
     }
   ],
   "env": {
